# eip712

./: .gitignore  Makefile  README.md  run.sh
.github/: c.yml
.github/workflows/: c.yml
src/: c_std_ext.c  c_std_ext.h  eip712.c  eip712.h  eip712_impl.c  eip712_impl.h
src/eip712/: eip712_tools.c  eip712_tools.h  eip712_tools_2.c  ethereum_tokens.c  memzero.c  sha3.c  sim712.c  tiny-json.c
src/eip712/sim_include/keepkey/board/: confirm_sm.h  layout.h
src/eip712/sim_include/keepkey/firmware/: coins.h  eip712.h  eip712_tools.h  ethereum_tokens.def  ethereum_tokens.h  tiny-json.h  uniswap_tokens.def
src/example/: example_base.c
src/test/: test_base.c
test/: Makefile  run-coverage.sh  run.sh  test_eip712.c
test/fuzz/: Makefile  fuzz_eip712.c  fuzz_eip712_2.c  run_fuzz.sh
test/fuzz/rust_compared/: Cargo.toml
test/fuzz/rust_compared/src/: main.rs
tools/nodejs_test/: compared_fuzzer.js  test_eip_712.js
tools/nodejs_test/data/: data1.json  data_dotbit.json
