[package]
name = "rust_compared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eip-712 = { path="deps/EIP-712" } # There is a problem with the version on rust
serde_json = "1.0.85"
rustc-hex = "2.1.0"
base64 = "0.13.0"